# NES_emulator

./: .gitignore  CMakeLists.txt  CPU6502.cpp  README.md  disassembler.cpp  machine.cpp  main.cpp
include/: CPU6502.h  disassembler.h  loadROM.h  machine.h  memory.h
includes/: CPU6502.h  disassembler.h  machine.h  memory.h
others/: 6502ops.csv
src/: CPU6502.cpp  disassembler.cpp  loadROM.cpp  machine.cpp  main.cpp  memory.cpp
